fix alignment

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
     font-family: 'Poppins', sans-serif;
     margin: 0 0;
     /* position: relative; */
-    text-align: center;
 }
 
 body {
